<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BloodDonorFinder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_register">Register</string>
    <string name="et_name">First Name + Last Name</string>
    <string name="et_bloodgroup">Blood Group</string>
    <string name="et_age">Age</string>
    <string name="et_contactNo">Contact No.</string>
    <string name="et_addLine1">Address Line1</string>
    <string name="et_addLine2">Address Line2</string>
    <string name="et_city">City</string>
    <string name="et_state">State</string>
    <string name="et_country">Country</string>
    <string name="et_zip">Zip</string>
    <string name="et_email">e-mail</string>
    <string name="et_username">Username</string>
    <string name="et_password">Password</string>
    <string name="et_confirmpassword">Confirm Password</string>
    <string name="cb_termsNconditions">I agree to Terms and Conditions</string>



    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_facts">facts</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_profile">profile</string>
    <string name="title_activity_finddonor">finddonor</string>

</resources>
